gcp/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: nasir
  annotations:
    kubernetes.io/ingress.class: "gce"
    # kubernetes.io/ingress.regional-static-ip-name: "web-static-ip"
    networking.gke.io/managed-certificates: managed-cert
    networking.gke.io/v1beta1.FrontendConfig: "http-to-https"
spec:
  rules:
  - host: gke.react-movie.nasir.id
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: react-movie-service
            port:
              number: 80
